# triseratop

./: .gitignore  CMakeLists.txt  README.md  bajan.c  bajan.h  main.c  ploting.c  ploting.h  utils.c  utils.h
